AVANCES EN LOS INSERTS

--- a/CapaPresentacion/App.config
+++ b/CapaPresentacion/App.config
@@ -6,7 +6,7 @@
 
 
 	<connectionStrings>
-		<add name ="Conectar" connectionString="Data Source=DESKTOP-IUF2VTF\SQLEXPRESS;Initial Catalog=registro;Integrated Security=True"/>
+		<add name ="Conectar" connectionString="Data Source=DESKTOP-VJ3SNST;Initial Catalog=registro;Integrated Security=True"/>
 		
 	</connectionStrings>
 </configuration>
