OTRA VEZ Nota para mi: Recuerda arreglar los store procedure de los diferentes modulos de la app, debido a error de instancias multiples necesitas agregar las condiciones que usen tanto en el SP de la capa de datos como de la database en SQL

--- a/Capa_Comun/Capa_Comun.csproj
+++ b/Capa_Comun/Capa_Comun.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheLogin.cs" />
+    <Compile Include="Cache_items.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
